# psi-driven-AI-Model-for-memory-prediction-in-containers

./: .gitignore  README.md  pyproject.toml
artifacts/controller/closed_loop/: session_index.jsonl
artifacts/metrics/: ablation_mini_20260716-025346.json  ablation_mini_20260716-032530.json
artifacts/metrics/final/: closed_loop_20260717-161637.json  heldout_20260716-152938.json  lowo_20260716-152749.json  param_shift_20260716-152800.json
artifacts/reports/: calibration_20260716-014102.json  env_validation_20260715-222315_4167fbed30ae.json
configs/: calibration.yaml  collection_full.example.yaml  collection_full.yaml  collection_full_final3.yaml  collection_full_remainder.yaml  collection_shift.yaml  controller.yaml  dataset.yaml  mini_collection.yaml  mini_leak_extra.yaml  models.yaml  validate_env.example.yaml
docker/: Dockerfile.workloads
docs/: PROJECT_EXECUTION_SPEC.md  PROJECT_WALKTHROUGH.md  decisions.md  final_report.md  final_report_presentation.html  progress.md  requirements_traceability.md
docs/project-walkthrough/: index.html
requirements/: base.txt  dev.txt  lock.txt
scripts/: run_tests.ps1
src/psi_memory/: __init__.py  cli.py
tests/: conftest.py
tests/integration/: conftest.py  test_container_sampling.py  test_controller_live.py  test_controller_loop.py  test_figures.py  test_lstm_e2e.py  test_pipeline_e2e.py  test_validate_env_e2e.py  test_workload_runs.py
tests/unit/: test_baselines_and_metrics.py  test_batch_config.py  test_calibration_analysis.py  test_cgroup_reader.py  test_controller_policies.py  test_controller_safety.py  test_dashboard_view.py  test_evaluation.py  test_feature_parity.py  test_lstm_components.py  test_new_workload_files.py  test_probe_parsing.py  test_psi_parser.py  test_quality_gates.py  test_report.py  test_runner_resilience.py  test_sampler_script.py  test_seed.py  test_splits_leakage.py  test_trace_replay.py  test_training_discipline.py  test_units.py  test_windows_labels.py
workloads/: bursty.py  file_burst.py  leak.py  mixed.py  sampler.py  steady.py  trace_replay.py  wl_common.py
workloads/traces/: example_trace.csv  plateau_steps.csv  spiky.csv
(+83 files in other folders)
